// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site renders Site renders correct 1`] = `
<Fragment>
  <Card
    title="Edit Comment"
  >
    <Row>
      <Column
        width={10}
      >
        <FormTextarea
          maxLength={1000}
          onChange={[Function]}
          rows={5}
          style={
            {
              "width": "500px",
            }
          }
          type="text"
        />
      </Column>
    </Row>
    <Row>
      <Column>
        <ButtonSuccess
          onClick={[Function]}
        >
          Save
        </ButtonSuccess>
      </Column>
      <Column>
        <ButtonDanger
          onClick={[Function]}
        >
          Delete
        </ButtonDanger>
      </Column>
    </Row>
  </Card>
</Fragment>
`;

exports[`site functionality edit field takes input 1`] = `
<Fragment>
  <Card
    title="Edit Comment"
  >
    <Row>
      <Column
        width={10}
      >
        <FormTextarea
          maxLength={1000}
          onChange={[Function]}
          rows={5}
          style={
            {
              "width": "500px",
            }
          }
          type="text"
          value="test"
        />
      </Column>
    </Row>
    <Row>
      <Column>
        <ButtonSuccess
          onClick={[Function]}
        >
          Save
        </ButtonSuccess>
      </Column>
      <Column>
        <ButtonDanger
          onClick={[Function]}
        >
          Delete
        </ButtonDanger>
      </Column>
    </Row>
  </Card>
</Fragment>
`;
